--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,8 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.box {
+  border: 1px solid white;
+  margin: 1rem;
+  padding: 0.5rem;
+}
